style: prevents page shift before calendar loads

--- a/styles/index.css
+++ b/styles/index.css
@@ -242,6 +242,7 @@ address {
 }
 
 .urlaubContainer section {
+  min-width: 355px;
   border-style: solid;
   border-width: 6px;
   border-color: var(--primaryColor);
@@ -1108,6 +1109,9 @@ li {
     grid-column: 10 / 14;
     grid-row: 7 / 10;
     margin: 5rem 5rem 0 0;
+  }
+  .urlaubContainer section {
+    min-width: 423px;
   }
 
   .lineToDirections {
